--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 		<link rel="stylesheet" href="./style.css" />
 		<title>Admin Dashboard</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<aside class="toolbar"></aside>
+			<header class="header"></header>
+			<main class="content"></main>
+		</div>
+	</body>
 </html>
