--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 	<body>
 		<div class="container">
 			<aside class="toolbar"></aside>
-			<header class="header"></header>
+			<header class="header">
+				<div class="header-top-bar">
+					<button class="search-button">Btn</button>
+					<input type="search" class="search-input" />
+					<button class="notification-button">Btn</button>
+					<img src="./assets/images" alt="avatar" class="avatar" />
+					<p>Morgan Oakley</p>
+				</div>
+				<div class="header-content">
+					<img src="./assets/images" alt="avatar" class="avatar" />
+					<p>Hi there,</p>
+					<p>Morgan Oakley (@morgan)</p>
+					<button class="new-button">Btn</button>
+					<button class="upload-button">Btn</button>
+					<button class="share-button">Btn</button>
+				</div>
+			</header>
 			<main class="content"></main>
 		</div>
 	</body>
