Move seach input bg color to vars and create header layout

--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 		<div class="container">
 			<aside class="toolbar"></aside>
 			<header class="header">
-				<div class="header-top-bar">
+				<div class="search-bar">
 					<button class="search-button">Btn</button>
 					<input type="search" class="search-input" />
+				</div>
+				<div class="user-menu">
 					<button class="notification-button">Btn</button>
 					<img src="./assets/images" alt="avatar" class="avatar" />
 					<p>Morgan Oakley</p>
 				</div>
-				<div class="header-content">
+				<div class="user-info-bar">
 					<img src="./assets/images" alt="avatar" class="avatar" />
 					<p>Hi there,</p>
 					<p>Morgan Oakley (@morgan)</p>
+				</div>
+				<div class="action-buttons">
 					<button class="new-button">Btn</button>
 					<button class="upload-button">Btn</button>
 					<button class="share-button">Btn</button>
