--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./style.css" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 		<title>Admin Dashboard</title>
 	</head>
 	<body>
@@ -12,7 +13,7 @@
 			<aside class="toolbar"></aside>
 			<header class="header">
 				<div class="search-bar">
-					<button class="search-button">Btn</button>
+					<button class="search-button"><span class="material-icons">search</span></button>
 					<input type="search" class="search-input" />
 				</div>
 				<div class="user-menu">
