Add separate class for header buttons and add icon for notification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./style.css" />
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+
 		<title>Admin Dashboard</title>
 	</head>
 	<body>
@@ -13,11 +15,13 @@
 			<aside class="toolbar"></aside>
 			<header class="header">
 				<div class="search-bar">
-					<button class="search-button"><span class="material-icons">search</span></button>
+					<button class="search-button header-button"><span class="material-icons">search</span></button>
 					<input type="search" class="search-input" />
 				</div>
 				<div class="user-menu">
-					<button class="notification-button">Btn</button>
+					<button class="notification-button header-button">
+						<span class="material-symbols-outlined"> notifications_active </span>
+					</button>
 					<img src="./assets/images" alt="avatar" class="avatar" />
 					<p>Morgan Oakley</p>
 				</div>
