Align user menu to center and add styles to header top buttons

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 			<header class="header">
 				<div class="header__search-bar search-bar">
 					<button class="search-bar__search-button search-button">
-						<span class="seach-button__icon material-icons">search</span>
+						<span class="search-button__icon button material-icons">search</span>
 					</button>
 					<input class="search-bar__search-input search-input" type="search" />
 				</div>
 				<div class="header__user-menu user-menu">
-					<button class="user-menu__notification-button">
+					<button class="user-menu__notification-button notification-button">
 						<span class="notification-button__icon material-symbols-outlined"> notifications_active </span>
 					</button>
 					<img class="user-menu__avatar" src="./assets/images" alt="avatar" />
