Add classes to info bar and apply bold font for header's text

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 						<span class="notification-button__icon material-symbols-outlined"> notifications_active </span>
 					</button>
 					<img class="user-menu__avatar" src="./assets/images" alt="avatar" />
-					<p>Morgan Oakley</p>
+					<p class="user-menu__user-name user-name">Morgan Oakley</p>
 				</div>
 				<div class="header__user-info-bar user-info-bar">
 					<img class="user-info-bar__avatar" src="./assets/images" alt="avatar" />
-					<p>Hi there,</p>
-					<p>Morgan Oakley (@morgan)</p>
+					<p class="user-info-bar__text">Hi there,</p>
+					<p class="user-info-bar__user-name">Morgan Oakley (@morgan)</p>
 				</div>
 				<div class="header__action-buttons action-buttons">
 					<button class="action-buttons__new-button">Btn</button>
