--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<p class="user-menu__user-name user-name">Morgan Oakley</p>
 				</div>
 				<div class="header__user-info-bar user-info-bar">
-					<img class="user-info-bar__avatar" src="./assets/images" alt="avatar" />
+					<img class="user-info-bar__avatar" src="./assets/images/avatar-1.png" alt="avatar" />
 					<p class="user-info-bar__text">Hi there,</p>
 					<p class="user-info-bar__user-name">Morgan Oakley (@morgan)</p>
 				</div>
