--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<button class="user-menu__notification-button notification-button">
 						<span class="notification-button__icon material-symbols-outlined"> notifications_active </span>
 					</button>
-					<img class="user-menu__avatar" src="./assets/images" alt="avatar" />
+					<img class="user-menu__avatar" src="./assets/images/avatar-1.png" alt="avatar" />
 					<p class="user-menu__user-name user-name">Morgan Oakley</p>
 				</div>
 				<div class="header__user-info-bar user-info-bar">
