--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 					<p class="user-info-bar__user-name">Morgan Oakley (@morgan)</p>
 				</div>
 				<div class="header__action-buttons action-buttons">
-					<button class="action-buttons__new-button">Btn</button>
-					<button class="action-buttons__upload-button">Btn</button>
-					<button class="action-buttons__share-button">Btn</button>
+					<button class="action-buttons__action-button">New</button>
+					<button class="action-buttons__action-button">Upload</button>
+					<button class="action-buttons__action-button">Share</button>
 				</div>
 			</header>
 			<main class="content"></main>
