Add content to content section, initial layout and initial styles for tiles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,84 @@
 					<button class="action-buttons__action-button">Share</button>
 				</div>
 			</header>
-			<main class="content"></main>
+			<main class="content">
+				<section class="content__tiles tiles">
+					<div class="tiles__tile tile">
+						<h1 class="tile__header">Lorem, ipsum.</h1>
+						<p class="tile__description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
+							laudantium, officiis corporis quasi voluptate distinctio id.
+						</p>
+						<div class="tile__detailed-buttons detailed-buttons">
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+						</div>
+					</div>
+					<div class="tiles__tile tile">
+						<h1 class="tile__header">Lorem, ipsum.</h1>
+						<p class="tile__description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
+							laudantium, officiis corporis quasi voluptate distinctio id.
+						</p>
+						<div class="tile__detailed-buttons detailed-buttons">
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+						</div>
+					</div>
+					<div class="tiles__tile tile">
+						<h1 class="tile__header">Lorem, ipsum.</h1>
+						<p class="tile__description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
+							laudantium, officiis corporis quasi voluptate distinctio id.
+						</p>
+						<div class="tile__detailed-buttons detailed-buttons">
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+						</div>
+					</div>
+					<div class="tiles__tile tile">
+						<h1 class="tile__header">Lorem, ipsum.</h1>
+						<p class="tile__description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
+							laudantium, officiis corporis quasi voluptate distinctio id.
+						</p>
+						<div class="tile__detailed-buttons detailed-buttons">
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+						</div>
+					</div>
+					<div class="tiles__tile tile">
+						<h1 class="tile__header">Lorem, ipsum.</h1>
+						<p class="tile__description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
+							laudantium, officiis corporis quasi voluptate distinctio id.
+						</p>
+						<div class="tile__detailed-buttons detailed-buttons">
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+						</div>
+					</div>
+					<div class="tiles__tile tile">
+						<h1 class="tile__header">Lorem, ipsum.</h1>
+						<p class="tile__description">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
+							laudantium, officiis corporis quasi voluptate distinctio id.
+						</p>
+						<div class="tile__detailed-buttons detailed-buttons">
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">Btn</button>
+						</div>
+					</div>
+				</section>
+				<section class="content__announcements"></section>
+				<section class="content__trending"></section>
+			</main>
 		</div>
 	</body>
 </html>
