Add header row to tiles grid and add top margin to it

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			</header>
 			<main class="content">
 				<section class="content__tiles tiles">
+					<h1 class="tiles__header">Projects</h1>
 					<div class="tiles__tile tile">
 						<h1 class="tile__header">Lorem, ipsum.</h1>
 						<p class="tile__description">
