Replace buttons' text by icons and add styles for buttons

--- a/index.html
+++ b/index.html
@@ -48,9 +48,17 @@
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
 						<div class="tile__detailed-buttons detailed-buttons">
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> heart_plus </span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined">
+									notification_add
+								</span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> double_arrow </span>
+							</button>
 						</div>
 					</div>
 					<div class="tiles__tile tile">
@@ -60,9 +68,17 @@
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
 						<div class="tile__detailed-buttons detailed-buttons">
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> heart_plus </span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined">
+									notification_add
+								</span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> double_arrow </span>
+							</button>
 						</div>
 					</div>
 					<div class="tiles__tile tile">
@@ -72,9 +88,17 @@
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
 						<div class="tile__detailed-buttons detailed-buttons">
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> heart_plus </span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined">
+									notification_add
+								</span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> double_arrow </span>
+							</button>
 						</div>
 					</div>
 					<div class="tiles__tile tile">
@@ -84,9 +108,17 @@
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
 						<div class="tile__detailed-buttons detailed-buttons">
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> heart_plus </span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined">
+									notification_add
+								</span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> double_arrow </span>
+							</button>
 						</div>
 					</div>
 					<div class="tiles__tile tile">
@@ -96,9 +128,17 @@
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
 						<div class="tile__detailed-buttons detailed-buttons">
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> heart_plus </span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined">
+									notification_add
+								</span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> double_arrow </span>
+							</button>
 						</div>
 					</div>
 					<div class="tiles__tile tile">
@@ -108,9 +148,17 @@
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
 						<div class="tile__detailed-buttons detailed-buttons">
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
-							<button class="detailed-buttons_button">Btn</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> heart_plus </span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined">
+									notification_add
+								</span>
+							</button>
+							<button class="detailed-buttons_button">
+								<span class="notification-button__icon material-symbols-outlined"> double_arrow </span>
+							</button>
 						</div>
 					</div>
 				</section>
