Add structure to announcement section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,29 @@
 						</div>
 					</div>
 				</section>
-				<section class="content__announcements"></section>
+				<section class="content__tiles tiles">
+					<h1 class="tiles__header">Announcements</h1>
+					<div class="tiles__announcements announcements">
+						<div class="announcements__announcement">
+							<h2 class="announcement__header">Lorem, ipsum.</h2>
+							<p class="announcement__description">
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, reprehenderit.
+							</p>
+						</div>
+						<div class="announcements__announcement">
+							<h2 class="announcement__header">Lorem, ipsum dolor.</h2>
+							<p class="announcement__description">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, dolorem.
+							</p>
+						</div>
+						<div class="announcements__announcement">
+							<h2 class="announcement__header">Lorem, ipsum dolor.</h2>
+							<p class="announcement__description">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, dolorem.
+							</p>
+						</div>
+					</div>
+				</section>
 				<section class="content__trending"></section>
 			</main>
 		</div>
