Add styles to tiles and Announcements section
Add box-shadow to tiles, add font color to tiles' descriptions and add layout styles to Announcements section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<h1 class="tiles__header">Projects</h1>
 					<div class="tiles__tile tile">
 						<h1 class="tile__header">Lorem, ipsum.</h1>
-						<p class="tile__description">
+						<p class="tile__description description">
 							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
@@ -63,7 +63,7 @@
 					</div>
 					<div class="tiles__tile tile">
 						<h1 class="tile__header">Lorem, ipsum.</h1>
-						<p class="tile__description">
+						<p class="tile__description description">
 							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
@@ -83,7 +83,7 @@
 					</div>
 					<div class="tiles__tile tile">
 						<h1 class="tile__header">Lorem, ipsum.</h1>
-						<p class="tile__description">
+						<p class="tile__description description">
 							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
@@ -103,7 +103,7 @@
 					</div>
 					<div class="tiles__tile tile">
 						<h1 class="tile__header">Lorem, ipsum.</h1>
-						<p class="tile__description">
+						<p class="tile__description description">
 							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
@@ -123,7 +123,7 @@
 					</div>
 					<div class="tiles__tile tile">
 						<h1 class="tile__header">Lorem, ipsum.</h1>
-						<p class="tile__description">
+						<p class="tile__description description">
 							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
@@ -143,7 +143,7 @@
 					</div>
 					<div class="tiles__tile tile">
 						<h1 class="tile__header">Lorem, ipsum.</h1>
-						<p class="tile__description">
+						<p class="tile__description description">
 							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et quis aspernatur odit mollitia
 							laudantium, officiis corporis quasi voluptate distinctio id.
 						</p>
@@ -164,23 +164,23 @@
 				</section>
 				<section class="content__tiles tiles--announcement">
 					<h1 class="tiles__header">Announcements</h1>
-					<div class="tiles__tile tile tile">
+					<div class="tiles__tile tile">
 						<div class="tiles__announcements announcements">
 							<div class="announcements__announcement">
 								<h2 class="announcement__header">Lorem, ipsum.</h2>
-								<p class="announcement__description">
+								<p class="announcement__description description">
 									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, reprehenderit.
 								</p>
 							</div>
 							<div class="announcements__announcement">
 								<h2 class="announcement__header">Lorem, ipsum dolor.</h2>
-								<p class="announcement__description">
+								<p class="announcement__description description">
 									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, dolorem.
 								</p>
 							</div>
 							<div class="announcements__announcement">
 								<h2 class="announcement__header">Lorem, ipsum dolor.</h2>
-								<p class="announcement__description">
+								<p class="announcement__description description">
 									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, dolorem.
 								</p>
 							</div>
