--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="content__tiles tiles--announcement">
+				<section class="content__tiles tiles--announcements">
 					<h1 class="tiles__header">Announcements</h1>
 					<div class="tiles__tile tile">
 						<div class="tiles__announcements announcements">
@@ -187,25 +187,25 @@
 						</div>
 					</div>
 				</section>
-				<section class="content__trending">
-					<h1 class="tiles__header">Announcements</h1>
-					<div class="tiles__tile tile tile">
-						<div class="tiles__announcements announcements">
-							<div class="announcements__announcement">
-								<h2 class="announcement__header">Lorem, ipsum.</h2>
-								<p class="announcement__description">
+				<section class="content__tiles tiles--trendings">
+					<h1 class="tiles__header">Trendings</h1>
+					<div class="tiles__tile tile">
+						<div class="tiles__trendings trendings">
+							<div class="trendings__trending">
+								<h2 class="trending__header">Lorem, ipsum.</h2>
+								<p class="trending__description">
 									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, reprehenderit.
 								</p>
 							</div>
-							<div class="announcements__announcement">
-								<h2 class="announcement__header">Lorem, ipsum dolor.</h2>
-								<p class="announcement__description">
+							<div class="trendings__trending">
+								<h2 class="trending__header">Lorem, ipsum dolor.</h2>
+								<p class="trending__description">
 									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, dolorem.
 								</p>
 							</div>
-							<div class="announcements__announcement">
-								<h2 class="announcement__header">Lorem, ipsum dolor.</h2>
-								<p class="announcement__description">
+							<div class="trendings__trending">
+								<h2 class="trending__header">Lorem, ipsum dolor.</h2>
+								<p class="trending__description">
 									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, dolorem.
 								</p>
 							</div>
