Add sctructure for Trendings section

--- a/index.html
+++ b/index.html
@@ -192,22 +192,48 @@
 					<div class="tiles__tile tile">
 						<div class="tiles__trendings trendings">
 							<div class="trendings__trending">
-								<h2 class="trending__header">Lorem, ipsum.</h2>
-								<p class="trending__description">
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, reprehenderit.
-								</p>
+								<div class="user-info-bar">
+									<img
+										class="user-info-bar__avatar"
+										src="./assets/images/avatar-3.png"
+										alt="avatar"
+									/>
+									<p class="user-info-bar__text">@tegan</p>
+									<p class="user-info-bar__user-name">Lorem, ipsum dolor.</p>
+								</div>
 							</div>
 							<div class="trendings__trending">
-								<h2 class="trending__header">Lorem, ipsum dolor.</h2>
-								<p class="trending__description">
-									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, dolorem.
-								</p>
+								<div class="user-info-bar">
+									<img
+										class="user-info-bar__avatar"
+										src="./assets/images/avatar-4.jpg"
+										alt="avatar"
+									/>
+									<p class="user-info-bar__text">@morgan</p>
+									<p class="user-info-bar__user-name">Lorem, ipsum dolor.</p>
+								</div>
 							</div>
 							<div class="trendings__trending">
-								<h2 class="trending__header">Lorem, ipsum dolor.</h2>
-								<p class="trending__description">
-									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum, dolorem.
-								</p>
+								<div class="user-info-bar">
+									<img
+										class="user-info-bar__avatar"
+										src="./assets/images/avatar-5.jpeg"
+										alt="avatar"
+									/>
+									<p class="user-info-bar__text">@kendall</p>
+									<p class="user-info-bar__user-name">Lorem, ipsum dolor.</p>
+								</div>
+							</div>
+							<div class="trendings_trending">
+								<div class="user-info-bar">
+									<img
+										class="user-info-bar__avatar"
+										src="./assets/images/avatar-6.jpeg"
+										alt="avatar"
+									/>
+									<p class="user-info-bar__text">@alex</p>
+									<p class="user-info-bar__user-name">Lorem, ipsum dolor.</p>
+								</div>
 							</div>
 						</div>
 					</div>
