Add content to toolbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,43 @@
 	</head>
 	<body>
 		<div class="container">
-			<aside class="toolbar"></aside>
+			<aside class="toolbar">
+				<div class="toolbar__logo logo">
+					<span class="logo__icon material-symbols-outlined"> notifications_active </span>
+					<h1 class="logo__header">Dashboard</h1>
+				</div>
+				<menu class="menu toolbar__menu">
+					<li class="menu__item item">
+						<span class="item__icon material-symbols-outlined"> notifications_active </span> Home
+					</li>
+					<li class="menu__item item">
+						<span class="item__icon material-symbols-outlined"> notifications_active </span> Profile
+					</li>
+					<li class="menu__item item">
+						<span class="item__icon material-symbols-outlined"> notifications_active </span> Messages
+					</li>
+					<li class="menu__item item">
+						<span class="item__icon material-symbols-outlined"> notifications_active </span> History
+					</li>
+					<li class="menu__item item">
+						<span class="item__icon material-symbols-outlined"> notifications_active </span> Tasks
+					</li>
+					<li class="menu__item item">
+						<span class="item__icon material-symbols-outlined"> notifications_active </span> Commuinities
+					</li>
+				</menu>
+				<menu class="menu toolbar__menu">
+					<li class="menu__item item">
+						<span class="item__icon material-symbols-outlined"> notifications_active </span> Settings
+					</li>
+					<li class="menu__item item">
+						<span class="item__icon material-symbols-outlined"> notifications_active </span> Support
+					</li>
+					<li class="menu__item item">
+						<span class="item__icon material-symbols-outlined"> notifications_active </span> Privacy
+					</li>
+				</menu>
+			</aside>
 			<header class="header">
 				<div class="header__search-bar search-bar">
 					<button class="search-bar__search-button search-button">
