Change icons of toolbar section

--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
 		<div class="container">
 			<aside class="toolbar">
 				<div class="toolbar__logo logo">
-					<span class="logo__icon material-symbols-outlined"> notifications_active </span>
+					<span class="logo__icon material-symbols-outlined"> dashboard </span>
 					<h1 class="logo__header">Dashboard</h1>
 				</div>
 				<menu class="menu toolbar__menu">
 					<li class="menu__item item">
-						<span class="item__icon material-symbols-outlined"> notifications_active </span> Home
+						<span class="item__icon material-symbols-outlined"> home </span> Home
 					</li>
 					<li class="menu__item item">
-						<span class="item__icon material-symbols-outlined"> notifications_active </span> Profile
+						<span class="item__icon material-symbols-outlined"> account_circle </span> Profile
 					</li>
 					<li class="menu__item item">
-						<span class="item__icon material-symbols-outlined"> notifications_active </span> Messages
+						<span class="item__icon material-symbols-outlined"> chat_bubble </span> Messages
 					</li>
 					<li class="menu__item item">
-						<span class="item__icon material-symbols-outlined"> notifications_active </span> History
+						<span class="item__icon material-symbols-outlined"> history </span> History
 					</li>
 					<li class="menu__item item">
-						<span class="item__icon material-symbols-outlined"> notifications_active </span> Tasks
+						<span class="item__icon material-symbols-outlined"> file_copy </span> Tasks
 					</li>
 					<li class="menu__item item">
-						<span class="item__icon material-symbols-outlined"> notifications_active </span> Commuinities
+						<span class="item__icon material-symbols-outlined"> groups </span> Commuinities
 					</li>
 				</menu>
 				<menu class="menu toolbar__menu">
 					<li class="menu__item item">
-						<span class="item__icon material-symbols-outlined"> notifications_active </span> Settings
+						<span class="item__icon material-symbols-outlined"> settings </span> Settings
 					</li>
 					<li class="menu__item item">
-						<span class="item__icon material-symbols-outlined"> notifications_active </span> Support
+						<span class="item__icon material-symbols-outlined"> help_center </span> Support
 					</li>
 					<li class="menu__item item">
-						<span class="item__icon material-symbols-outlined"> notifications_active </span> Privacy
+						<span class="item__icon material-symbols-outlined"> verified_user </span> Privacy
 					</li>
 				</menu>
 			</aside>
